✨ feat(all): 破局!
- 所有jdk版本调整为1.8（java 8），代码语法微调
- consumer原型完成！